infrastructure/kubernetes/installation/manual/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing
  namespace: myapp
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - testing.locthp.com
    secretName: testflask-certificate
  rules:
  - host: testing.locthp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-flask
            port:
              number: 80
